# deep-learning

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
app/: main.py  train.py
