[project]
name = "Deep-Learning"
version = "0.1.0"
description = "Deep learning project basics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "ruff",
]

[tool.ruff]
target-version = "py314" 
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets
# E/W: Error/Warning (Pyflakes/pycodestyle)
# F: Pyflakes
# I: isort (import sorting)
# B: flake8-bugbear (common design issues)
# UP: pyupgrade (modernize syntax)
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
# Use double quotes, similar to Black
quote-style = "double"
indent-style = "space"