[project]
name = "Deep-Learning"
version = "0.1.0"
description = "Deep learning project basics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "timm",
    "lightning",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py314" 
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets
# E/W: Error/Warning (Pyflakes/pycodestyle)
# F: Pyflakes
# I: isort (import sorting)
# B: flake8-bugbear (common design issues)
# UP: pyupgrade (modernize syntax)
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
# Use double quotes, similar to Black
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true